# AstroClaude

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
agents/: _critic.md  _house-rules.md  _interpreter.md  anima-animus.md  ego.md  eros.md  numinous.md  parental.md  persona.md  shadow.md  vocation.md  wound.md
docs/adr/: 0001-committed-archetypal-lens.md  0002-deterministic-chart-computation.md  0003-decompose-by-psychic-structure.md  0004-default-to-blind-readings.md  0005-rag-over-depth-corpus.md  0006-qualitative-hermeneutic-evaluation.md  0007-claude-code-as-runtime.md  0008-run-artifact-layout-module.md  0009-interpreter-commits.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/prd/: 0001-natal-sandbox-v1.md
src/natal_chart/: __init__.py  cli.py  compute.py  corpus.py  corpus_cli.py  fabrication.py  models.py  report.py  report_cli.py  retrieval_eval.py  retrieve.py  run.py  run_artifact.py  semantic.py
tests/: test_cli.py  test_compute_chart.py  test_corpus_ingestion.py  test_fabrication_check.py  test_models.py  test_repo_scaffold.py  test_report.py  test_retrieval_eval.py  test_retrieve.py  test_roster.py  test_run_artifact.py  test_run_artifact_layout.py
